# HornetMM

./: .gitignore  BepInExInstall.py  LICENCE  LICENCE.md  LICENSE  README.md  base.py  bepinex_install.json  icon_macos.icns  pyproject.toml  requirements.txt  settings.json  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
1click/: 1clicksupport.py
HornetMM.egg-info/: PKG-INFO  SOURCES.txt
hmm/: __init__.py  base.py  settings.json
hmm/lua/: example.lua  lualoader.py
hmm/menus/: BepInExInstall.py  ModManagement.py  SettingsMenu.py  settings.json
hmm/oneclick/: oneclick.py
lua/: example.lua  lualoader.py
menus/: ModManagement.py  ModMenu.py  ModMenuSilksong.py  __init__.py
oneclick/: __init__.py  oneclick.py
