[project]
name = "hornetmm"
version = "0.1.0"
description = "A Simple, Crossplatform Mod Manager for Hollow Knight"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Barrett", email = "barrettbecker19@gmail.com"}
]


[tools.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
    "sys_platform == 'windows'"
]
